--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,30 @@
 	src: url(./fonts/Remboy.ttf)
 }
 
+
+.mb-1 {
+  position: relative;
+}
+
+.bg-image {
+  transition: background-image 1s;
+  /* The image used */
+  background-image: null;
+margin-bottom: -1000px;
+z-index: -1;
+  /* Add the blur effect */
+  filter: blur(25px);
+  -webkit-filter: blur(25px);
+
+  /* Full height */
+  height: 1000px;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 #fullpage {
   display: none;
   position: absolute;
@@ -55,6 +79,56 @@
   border-radius: 10px;
   border-color: white;
 }
+
+.speaker {
+  height: 30px;
+  width: 30px;
+  position: fixed;
+  bottom: 8%;
+  left: 2.5%;
+  overflow: hidden;
+  display: inline-block;
+}
+.speaker span {
+  display: block;
+  width: 8px;
+  height: 8px;
+  background: #fff;
+  margin: 11px 0 0 2px;
+}
+.speaker span:after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-color: transparent #fff transparent transparent;
+  border-width: 10px 14px 10px 15px;
+  left: -13px;
+  top: 5px;
+}
+.speaker span:before {
+  transform: rotate(45deg);
+  border-radius: 0 50px 0 0;
+  content: '';
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  border-style: double;
+  border-color: #fff;
+  border-width: 7px 7px 0 0;
+  left: 18px;
+  top: 9px;
+  transition: all 0.2s ease-out;
+}
+.speaker:hover span:before {
+  transform: scale(.8) translate(-3px,0) rotate(42deg);
+}
+.speaker.mute span:before {
+  transform: scale(.5) translate(-15px,0) rotate(36deg);
+  opacity: 0;
+}
+
 
 .fixed {
   position: fixed;
@@ -101,6 +175,7 @@
 }
 
 body {
+  
   background-COLOR: black;
 	background-size: 300% 300%;
 	animation: gradient 10s ease infinite;
